src/pages/Owner/RegisterPopup/staffpopup.scss
::-webkit-input-placeholder {
    /* WebKit, Blink, Edge */
    color: #AAAAA4 !important;
}

.staff-popup-overlay {
    // display: flex;
    // justify-content: center;
    // align-items: center;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(0, 0, 0, 0.7);
    transition: opacity 500ms;
    visibility: visible;
    opacity: 1;
    z-index: 1000;
    overflow: scroll;


    .popup {
        margin: 10px auto 10px;
        padding: 10px;
        background: #fff;
        border-radius: 8px;
        width: 60vw;
        transition: all 1s ease-in-out;


        .content {
            text-align: center;
            position: relative;

            .ti-close {
                position: absolute;
                right: 10px;
                top: 0px;

                :hover {
                    cursor: pointer;
                }
            }

            .popup-title {
                font-size: 24px;
                font-weight: 600;
                border-bottom: 2px solid #CFCFCF;
                padding-top: 10px;
                margin-bottom: 20px;
            }

            .popup-form {
                padding: 10px 10% ;
                // padding-top: 10px;
                // padding-left: 6px;
                // padding-bottom: 5px;
                width: 80%;
                height: auto;
                // border: 1px solid #CFCFCF;
                margin: 0 auto;

                .icon-img {
                    width: 25px;
                    height: 25px;
                    border-radius: 50px;
                    border: 1px solid #8F8F8F;
                    text-align: center;
                    align-items: center;
                    background: #8F8F8F;

                    :hover {
                        cursor: pointer;
                    }
                }

                .pdt-10 {
                    padding-top: 10px;
                }

                .avatar-col {
                    width: 30%;
                    margin-top: 10px;
                    margin-right: 30px;

                    .col-title {
                        text-align: left;
                        font-weight: 600;
                        font-size: 18px;

                        span {
                            color: red;
                            font-weight: bold;
                        }
                    }

                    .avatar {
                        height: 151px;
                        //padding: 20px 20px;
                        background: rgba(225, 225, 225, 0.4);
                        padding: 5px;
                        border-radius: 8px;

                        .img-upload {
                            width: 100%;
                            height: 100%;

                            .tool-text {
                                visibility: hidden;
                                width: 100px;
                                background-color: black;
                                font-size: 14px;
                                color: #fff;
                                text-align: center;
                                padding: 5px 0;
                                border-radius: 6px;

                                /* Position the tooltip text - see examples below! */
                                position: absolute;
                                z-index: 1;
                            }


                            &:hover {
                                opacity: 0.8;
                                cursor: pointer;
                            }

                            &:hover .tool-text {
                                visibility: visible;
                            }

                            img {
                                width: 100%;
                                height: 100%;
                            }


                        }
                    }
                }

                .form-col {
                    margin-top: 10px;
                    width: 100%;

                    .w-200 {
                        width: 200px;
                    }

                    .w-80 {
                        width: 80px
                    }

                    .mgr-30 {
                        margin-right: 30px;
                    }

                    .form-input {
                        width: 100%;
                        text-align: left;
                        margin-bottom: 10px;

                        .form-title {
                            font-weight: 600;
                            font-size: 18px;

                            span {
                                color: red;
                                font-weight: bold;
                            }
                        }

                        .img-input {
                            width: 95%;
                            padding: 7px 7px;
                            background: rgba(225, 225, 225, 0.4);
                            border-radius: 8px;
                            min-height: 200px;

                            .img-upload {
                                text-align: center;
                                width: 100%;
                                height: 100%;

                                .tool-text {
                                    visibility: hidden;
                                    width: 100px;
                                    background-color: black;
                                    font-size: 14px;
                                    color: #fff;
                                    text-align: center;
                                    padding: 5px 0;
                                    border-radius: 6px;

                                    /* Position the tooltip text - see examples below! */
                                    position: absolute;
                                    z-index: 1;
                                }


                                &:hover {
                                    opacity: 0.8;
                                    cursor: pointer;
                                }

                                &:hover .tool-text {
                                    visibility: visible;
                                }

                                img {
                                    width: 100%;
                                    height: 100%;
                                }


                            }

                        }

                        .txt-input {
                            width: 95%;
                            font-size: 16px;
                            padding: 8px;
                            border: 2px solid #B4B4B4;
                            border-radius: 8px;

                            .txt-placeholder {
                                color: #AAAAA4;
                            }


                        }

                        .form-radio {
                            label {
                                font-weight: 500;
                                margin-right: 10px;
                            }

                            input[type='radio'] {
                                height: 14px;
                                width: 14px;
                                vertical-align: middle;
                                accent-color: #559901;
                            }

                        }
                    }
                }
            }

            .btn {
                padding: 20px;
                // width: 100%;

                .space-between {
                    width: 100%;
                    display: flex;
                    justify-content: space-between;

                    button {
                        width: 160px;
                    }

                    .btn-add {
                        // background-color: #559901;
                        padding: 18px 34px;
                        // color: #fff;
                        font-weight: 600;
                        font-size: 18px;
                        border-radius: 8px;
                    }

                    .btn-cancel {
                        // background-color: #E2442E;
                        padding: 18px 18px;
                        // color: #fff;
                        font-weight: 600;
                        font-size: 18px;
                        border-radius: 8px;
                    }
                }
            }

        }
    }
}

